--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "Pritam Mondal",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
+    "mongoose-aggregate-paginate-v2": "^1.1.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
