Creating multer middleware for file handling | Creating utility service for cloudinary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["dsphere", "geospatial", "zipcode"]
+  "cSpell.words": [
+    "cloudinary",
+    "dsphere",
+    "fieldname",
+    "geospatial",
+    "zipcode"
+  ]
 }
